# satisfactory_factory_planner

./: Cargo.toml  README.md  recipes.json
.github/workflows/: create_release.yml
src/: main.rs
